--- a/.github/workflows/dev_maya.yml
+++ b/.github/workflows/dev_maya.yml
@@ -46,12 +46,14 @@ jobs:
       - name: Prepare deployment package
         working-directory: ./Backend
         run: |
+          # Remove dev dependencies and reinstall only production dependencies
+          rm -rf node_modules
+          npm ci --production --prefer-offline --no-audit
+          
+          # Clean up unnecessary files
           rm -rf logs .git
           find . -name "*.log" -type f -delete
           find . -name ".DS_Store" -type f -delete
-          if [ -d "node_modules" ]; then
-            npm prune --production || true
-          fi
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
