--- a/Backend/web.config
+++ b/Backend/web.config
@@ -1,43 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <!-- WebSocket: socket.io uses HTTP long-polling by default, so native WebSocket is optional -->
-    <!-- Enable if you need native WebSocket support (socket.io works fine with long-polling) -->
-    <webSocket enabled="false" />
-    
-    <!-- Configure iisnode handler for Node.js application -->
+    <!-- Forward all requests to Node.js -->
     <handlers>
       <add name="iisnode" path="src/index.js" verb="*" modules="iisnode"/>
     </handlers>
-    
-    <!-- URL Rewrite rules -->
+
     <rewrite>
       <rules>
-        <!-- Node Inspector rule (for debugging) -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^src/index.js\/debug[\/]?" />
         </rule>
-        
-        <!-- Static content rule - serve files from public directory if they exist -->
-        <!-- Note: Express app should handle static files via express.static(), this is a fallback -->
-        <rule name="StaticContent" stopProcessing="true">
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile"/>
-          </conditions>
-          <action type="None"/>
-        </rule>
-        
-        <!-- Dynamic content rule - route all other requests to Node.js app -->
+
         <rule name="DynamicContent">
-          <conditions>
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
-          </conditions>
+          <match url=".*" />
           <action type="Rewrite" url="src/index.js"/>
         </rule>
       </rules>
     </rewrite>
-    
-    <!-- Security settings -->
+
     <security>
       <requestFiltering>
         <hiddenSegments>
@@ -45,34 +26,6 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
-    
-    <!-- iisnode configuration -->
-    <!-- For Azure App Service: node.exe is found via PATH based on WEBSITE_NODE_DEFAULT_VERSION -->
-    <!-- Azure automatically installs Node.js based on WEBSITE_NODE_DEFAULT_VERSION setting -->
-    <!-- logDirectory: Relative path - iisnode will create logs in app directory or use default -->
-    <!-- If permission issues occur, logs will be in D:\home\LogFiles\iisnode automatically -->
-    <iisnode
-      nodeProcessCommandLine="node.exe"
-      loggingEnabled="true"
-      logDirectory="iisnode"
-      debugHeaderEnabled="true"
-      debuggerPortRange="5058-6058"
-      maxNamedPipeConnectionRetry="100"
-      namedPipeConnectionRetryDelay="250"
-      maxConcurrentRequestsPerProcess="1024"
-      asyncCompletionThreadCount="0"
-      initialRequestBufferSize="4096"
-      maxRequestBufferSize="65536"
-      watchedFiles="*.js;iisnode.yml"
-      uncFileChangesPollingInterval="5000"
-      gracefulShutdownTimeout="60000"
-      flushResponse="true"
-      promoteServerVars=""
-      configOverrides="iisnode.yml"
-      devErrorsEnabled="true"/>
-    
-    <!-- HTTP Errors - redirect to Node.js app for better error handling -->
-    <httpErrors existingResponse="PassThrough" />
   </system.webServer>
 </configuration>
 
